--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -82,6 +82,8 @@
   year = { 2012}
 }
 
+
+
 @WEB{Qurany,
   key = {Qurany},
   link = {http://quranytopics.appspot.com/},
@@ -360,6 +362,20 @@ ISSN={1520-6149},}
   year={ 2008},
 
 }
+
+@ARTICLE{Chelli-Nits,
+  author={Assem Chelli and Merouane Dahmani and Amar Balla  and Taha Zerrouki  },
+  title = {مكتبة برمجية للفهرسة والبحث في القرآن الكريم},
+  year={2011},
+  publisher={NITS"2011},
+ }
+
+@ARTICLE{Chelli-LREC,
+  author={Assem Chelli and Amar Balla  and Taha Zerrouki },
+  title = {Advanced Search in Quran: Classification and Proposition of All Possible Features},
+  year={2012},
+  publisher={LREC 2012 pre-conference workshop: LRE-Rel - Language Resource and Evaluation for Religious Texts},
+ }
 
 @ARTICLE{San08,
   author = {Majed Sanan},
